--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         built with 💚 by <a href="https://twitter.com/blinry" target="_blank">blinry</a> for NGW 2020
         |
         improve the tour <a href="https://github.com/blinry/tour.recurse.com">on GitHub!</a> |
-        Map position: {"x": <span id="x">0</span>, "y": <span id="y">0</span>}
+        Map position: {x: <span id="x">0</span>, y: <span id="y">0</span>}
     </div>
 </body>
 </html>
